tests/baselines/reference/parserErrorRecovery_ArgumentList6.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArgumentLists/parserErrorRecovery_ArgumentList6.ts (3 errors) ====
    Foo(,
        ~
!!! error TS1135: Argument expression expected.
         
!!! error TS1005: ')' expected.
    ~~~
!!! error TS2304: Cannot find name 'Foo'.